--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "build": "prisma generate && next build",
+    "dev": "next dev",
+    "dev:lan": "next dev -H 0.0.0.0",
     "start": "next start",
     "lint": "eslint"
   },
