--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "lucide-react": "^0.556.0",
     "next": "^16.1.1",
     "next-themes": "^0.4.6",
+    "pdf-parse": "^2.4.5",
     "pdfjs-dist": "^5.4.449",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "react-dropzone": "^14.3.8",
     "react-markdown": "^10.1.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
